<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_authorize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_menu">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_stroke" />
    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/img_icon"
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/color_white">

        <EditText
            android:id="@+id/txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_email"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"

        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/color_white">

        <EditText
            android:id="@+id/txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white" />
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_below="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        app:backgroundTint="@color/color_blue"
        android:textColor="@color/color_white"
        />




</RelativeLayout>
