<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        app:cardElevation="5dp">


        <com.chauthai.swipereveallayout.SwipeRevealLayout
            android:id="@+id/swipe_reveal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dragEdge="right"
            app:mode="same_level">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/block"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_pink_round"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/layout_block_account"
                    android:textColor="@color/color_white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/call"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_green_round"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/layout_call"
                    android:textColor="@color/color_white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_blue_round"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/layout_detail"
                    android:textColor="@color/color_white"
                    android:textStyle="bold" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@color/color_white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/regency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="phụ huynh : "
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/regency"
                    android:maxLines="1"
                    android:text="Dương Trần Hà Phương" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/regency"
                    android:layout_marginTop="3dp"
                    android:text="Địa chỉ : "
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView4"
                    android:layout_alignBottom="@+id/textView4"
                    android:layout_toEndOf="@+id/textView4"
                    android:maxLines="1"
                    android:text="Tp.HCM sdsdf sfas das da sds d asd as da  wdwa d aw daw d awd aw da wd awd  efkdasjf dsk da sfkjds fksdfkjsd fjksd fkjsdkfjsjf waf uishd asiuhd aiushd iaushdiuash iduahsd" />
            </RelativeLayout>
        </com.chauthai.swipereveallayout.SwipeRevealLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>